--- a/indie-authors.html
+++ b/indie-authors.html
@@ -142,7 +142,7 @@
 
   <main>
     <h2>Independent Author Policy</h2>
-    <img src="https://drive.google.com/uc?export=view&id=1SXcHMp5mO_m7bEeFXqwEIlxpgbjQ6ieP" alt="Author or Book Image">
+
     <p>Thank you for your interest in The Town Book Store. Please read our policy in its entirety; because we receive several author submissions weekly, we cannot respond to each individually.</p>
     <p>If your book has been published through a traditional publisher and we feel we have the appropriate audience for it, we will order it through them or one of our regular distributors on standard industry terms. Please note that we do not purchase books from Amazon.</p>
     <p>If your book is self-published, not available through our regular distributors or is only available on a non-returnable basis or without the standard terms, we may decide to accept a copy on consignment from you directly. If this is the case, we will send you a Consignment Agreement.</p>
@@ -153,6 +153,9 @@
 
   <footer>
     &copy; 2025 The Town Bookstore &nbsp;|&nbsp; 270 East Broad Street, Westfield, NJ &nbsp;|&nbsp; (908) 233-3535
+  </footer>
+</body>
+</html>
   </footer>
 </body>
 </html>
